--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: page
 			data-strict="1"
 			data-reactions-enabled="1"
 			data-emit-metadata="1"
-			data-input-position="top"
+			data-input-position="bottom"
 			data-theme="preferred_color_scheme"
 			data-lang="zh-CN"
 			data-loading="lazy"
