--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; 国际时间: {{ site.time | date: '%Y-%m-%d %H:%M:%S' }}    <a href="https://dumengru.com/">鄂ICP备20002553号-2</a></p>
+				<p class="copyright">&copy;<a href="https://dumengru.com/">鄂ICP备20002553号-2</a></p>
 			</div>
 		</footer>
 		<script>
