--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy;<a href="https://beian.miit.gov.cn">鄂ICP备20002553号-2</a></p>
+				<p class="copyright">&copy;<a href="https://beian.miit.gov.cn/" target="_blank">鄂ICP备20002553号-2</a></p>
 			</div>
 		</footer>
 		<script>
